syntax = "proto3";


service SocksInventoryGrpc {
  rpc create(inventory) returns (EmptyInventoryMessage){}
  rpc getAll(EmptyInventoryMessage) returns (stream inventory) {}
  rpc getById(IntReqInventory) returns (inventory) {}
  rpc getByCardId(IntReqInventory) returns (stream inventory) {}
  rpc updateInventory(inventory) returns (EmptyInventoryMessage) {}
  rpc deleteByCardId(IntReqInventory) returns (EmptyInventoryMessage) {}
  rpc deleteById(IntReqInventory) returns (EmptyInventoryMessage) {}
}

message IntReqInventory{
  int32 request = 1;
}

message inventory {
  int32 id = 1;
  int32 cardId = 2;
  string color = 3;
  string size = 4;
  int32 quantity = 5;
}

message EmptyInventoryMessage {

}